--- a/src/index.sass
+++ b/src/index.sass
@@ -23,6 +23,7 @@ $mobile-padding: 25px
   padding: 10px 20px
   color: $first-col
   background-color: transparent
+  position: relative
   border: none
   border-radius: 7px
   transition: opacity .24s ease-in-out
@@ -34,7 +35,77 @@ $mobile-padding: 25px
     background-color: #3A2E39
   &:hover
     opacity: .65
-    cursor: pointer 
+    cursor: pointer
+  &__link
+    position: absolute
+    top: 0
+    bottom: 0
+    right: 0
+    left: 0
+
+// burger
+
+.burger-menu
+  position: fixed
+  display: flex
+  flex-direction: column
+  gap: 30px
+  align-items: center
+  justify-content: center
+  top: 0
+  width: 100%
+  height: 100%
+  bottom: 0
+  transform: translateX(100%)
+  z-index: 10
+  background-color: #1E555C
+  transition: transform .24s ease-out
+  &_active
+    transform: translateX(0)
+  &__link
+    color: $second-col
+    text-decoration: none
+    font-size: 35px
+    font-weight: 700
+    text-transform: uppercase
+    transition: opacity .24s linear
+    &:hover
+      opacity: .65
+
+
+.burger-buttons
+  position: fixed
+  top: 50px
+  right: 50px
+  width: 50px
+  height: 50px
+  transition: opacity .24s linear
+  z-index: 100
+  &_active
+    padding-top: 12px
+  &:hover
+    cursor: pointer
+    opacity: .6
+
+.burger-buttons .burger-line
+  transition: transform .3s linear
+.burger-buttons_active .burger-line
+  transition: transform .3s linear
+.burger-buttons_active .burger-line:first-of-type
+  transform: rotate(45deg)
+  margin-bottom: -4px
+.burger-buttons_active .burger-line:last-of-type
+  transform: rotate(-45deg)
+  margin-bottom: 0
+.burger-buttons_active .burger-line:nth-of-type(2)
+  display: none
+
+.burger-line
+  height: 5px
+  width: 100%
+  background-color: #3A2E39
+  &:not(:last-of-type)
+    margin-bottom: 15px
 
 // preloader
 
