--- a/src/index.sass
+++ b/src/index.sass
@@ -131,7 +131,96 @@ $mobile-padding: 25px
     @media screen and (max-width: $mobile-width)
       margin-bottom: 5px
 
-// preloader
+// preloader при первоначальной загрузке страницы
+
+@keyframes preloader-inside-white 
+  0% 
+      -webkit-transform: scale(0, 0)
+      -moz-transform: scale(0, 0)
+      -ms-transform: scale(0, 0)
+      -o-transform: scale(0, 0)
+      transform: scale(0, 0)
+  100% 
+      -webkit-transform: scale(1, 1)
+      -moz-transform: scale(1, 1)
+      -ms-transform: scale(1, 1)
+      -o-transform: scale(1, 1)
+      transform: scale(1, 1)
+
+@keyframes preloader-inside-red 
+  0% 
+      -webkit-transform: scale(0, 0)
+      -moz-transform: scale(0, 0)
+      -ms-transform: scale(0, 0)
+      -o-transform: scale(0, 0)
+      transform: scale(0, 0)
+  30% 
+      -webkit-transform: scale(0, 0)
+      -moz-transform: scale(0, 0)
+      -ms-transform: scale(0, 0)
+      -o-transform: scale(0, 0)
+      transform: scale(0, 0)
+  100% 
+      -webkit-transform: scale(1, 1)
+      -moz-transform: scale(1, 1)
+      -ms-transform: scale(1, 1)
+      -o-transform: scale(1, 1)
+      transform: scale(1, 1)
+
+.preloader 
+  visibility: hidden
+  opacity: 0
+  align-items: center
+  justify-content: center
+  width: 100%
+  height: 100%
+  z-index: 10
+  z-index: 1000
+  display: flex
+  position: fixed
+  top: 0
+  left: 0
+  background-color: rgba(0, 0, 0, .6)
+  transition: visibility .4s, opacity .4s ease-in-out
+
+.preloader_active 
+  opacity: 1
+  visibility: visible
+
+.preloader__container 
+  width: 100px
+  height: 100px
+  position: relative
+
+.preloader__round 
+  width: 100px
+  height: 100px
+  position: absolute
+  top: 0
+  left: 0
+  background: #1E555C
+  border-radius: 50px
+
+.preloader__round::after,
+.preloader__round::before 
+  content: ''
+  width: 100px
+  height: 100px
+  position: absolute
+  top: 0
+  left: 0
+  border-radius: 50px
+
+.preloader__round::after 
+  background: white
+  animation: preloader-inside-white 1s ease-in-out infinite
+
+.preloader__round::before 
+  z-index: 10
+  background: #3B3F3B
+  animation: preloader-inside-red 1s ease-in-out infinite
+
+// loader для fetch-запросов
 
 .loader,
 .loader:before,
